--- a/css/main.css
+++ b/css/main.css
@@ -926,7 +926,7 @@ body {
   padding: 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .advantages {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -955,7 +955,7 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .advantages__item {
     width: calc((100% - 60px)/2);
     margin: 15px;
@@ -1005,7 +1005,7 @@ body {
 .advantages__text {
   margin: 0;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71em;
 }
 
 .main__section {
