--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       display: flex;
       flex-wrap: wrap;
       margin: -15px;
@@ -23,7 +23,7 @@
       }
     }
     
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       width: calc((100% - 60px)/2);
       margin: 15px;
     }
@@ -64,5 +64,5 @@
   .advantages__text {
     margin: 0;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71em;
   }
