--- a/css/main.css
+++ b/css/main.css
@@ -945,10 +945,6 @@ body {
   }
 }
 
-.advantages__item {
-  width: 450px;
-}
-
 @media screen and (max-width: 767px) {
   .advantages__item:not(:last-child) {
     margin-bottom: 30px;
@@ -1012,13 +1008,26 @@ body {
   padding-top: 0;
 }
 
+@media screen and (max-width: 1199px) {
+  .main__section {
+    display: none;
+  }
+}
+
 .section__title {
-  margin: 0px 0px 50px 0px;
+  margin: 0px 0px 30px 0px;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17em;
   text-align: center;
   color: var(--title-text-cl);
+}
+
+@media screen and (min-width: 1200px) {
+  .section__title {
+    margin: 0px 0px 50px 0px;
+    font-size: 36px;
+  }
 }
 
 .specialty {
@@ -1064,13 +1073,28 @@ body {
 .team {
   margin: 0;
   padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .team__item {
-  width: 270px;
   background-color: #ffffff;
   text-align: center;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1078,8 +1102,26 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__item {
+    width: calc((100% - 60px)/2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: 270px;
+  }
+  .team__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .team__img {
@@ -1088,7 +1130,13 @@ body {
 
 .team__description {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__description {
+    padding-bottom: 30px;
+  }
 }
 
 .team__name {
