--- a/scss/layout/_specialty.scss
+++ b/scss/layout/_specialty.scss
@@ -1,15 +1,24 @@
   .main__section {
     padding-top: 0;
+
+    @media screen and (max-width: 1199px) {
+      display: none;
+    }
   }
   
   .section__title {
-    margin: 0px 0px 50px 0px;
+    margin: 0px 0px 30px 0px;
   
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17em;
     text-align: center;
     color: var(--title-text-cl);
+
+    @media screen and (min-width: 1200px){ 
+      margin: 0px 0px 50px 0px;
+      font-size: 36px;
+    }
   }
   
   .specialty {
