--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -5,20 +5,44 @@
   .team {
     margin: 0;
     padding: 0;
-    display: flex;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin: -15px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
   }
   
   .team__item {
-    width: 270px;
     background-color: #ffffff;
     text-align: center;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
-    &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+    
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 60px)/2);
+      margin: 15px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+      &:not(:last-child) {
         margin-right: 30px;
       }
+    } 
+
+    
   }
   
   .team__img {
@@ -27,8 +51,13 @@
   
   .team__description {
     padding-top: 30px;
-    padding-bottom: 30px;
-  }
+    padding-bottom: 24px;
+
+    @media screen and (min-width: 1200px) {
+      padding-bottom: 30px;
+      }
+    } 
+  
   
   .team__name {
     margin-top: 0px;
