--- a/css/main.css
+++ b/css/main.css
@@ -471,8 +471,16 @@ body {
   color: var(--accent-text-cl);
 }
 
-.subscribe {
-  margin-left: 93px;
+@media screen and (max-width: 1199px) {
+  .subscribe {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    margin-left: 93px;
+  }
 }
 
 .subscribe__title {
@@ -484,30 +492,45 @@ body {
   color: #ffffff;
 }
 
-.subscribe__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .subscribe__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .subscribe__input {
-  width: 358px;
+  width: 94%;
+  margin-bottom: 20px;
   padding: 15px 16px;
-  margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  color: #ffffff;
-  background-color: transparent;
   cursor: pointer;
   outline: none;
+  color: #ffffff;
+  background-color: transparent;
   -webkit-transition-property: border-color;
   transition-property: border-color;
   -webkit-transition-duration: var(--time);
           transition-duration: var(--time);
   -webkit-transition-timing-function: var(--cubic);
           transition-timing-function: var(--cubic);
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe__input {
+    margin: 0 12px 0 0;
+    width: 358px;
+  }
 }
 
 .subscribe__input:focus, .subscribe__input:hover {
@@ -549,6 +572,13 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 10px 28px;
+}
+
+@media screen and (max-width: 1199px) {
+  .subscribe__button {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .subscribe__icon {
@@ -716,10 +746,16 @@ body {
 
 .address__residential {
   margin-top: 0;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
   font-size: 14px;
   line-height: 1.71em;
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .address__residential {
+    margin-bottom: 9px;
+  }
 }
 
 .address__list {
@@ -728,7 +764,13 @@ body {
 }
 
 .address__item:first-child {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+  .address__item:first-child {
+    margin-bottom: 9px;
+  }
 }
 
 .address__link {
@@ -754,8 +796,8 @@ body {
   padding-bottom: 24px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19em;
+  font-size: 24px;
+  line-height: 1.17em;
   color: var(--accent-text-cl);
 }
 
@@ -763,18 +805,32 @@ body {
   color: var(--title-text-cl);
 }
 
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19em;
+  }
+}
+
 .footer-logo {
   display: block;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19em;
+  font-size: 24px;
+  line-height: 1.17em;
   color: var(--accent-text-cl);
 }
 
 .footer-logo__part--accent {
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-logo {
+    font-size: 26px;
+    line-height: 1.19em;
+  }
 }
 
 .header {
@@ -1157,12 +1213,41 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -15px;
   padding: 0;
 }
 
-.client__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .client {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .client__item {
+    width: calc((100% - 60px)/2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .client__item {
+    width: calc((100% - 90px)/3);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client__item {
+    width: 170px;
+  }
+  .client__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .client__link {
@@ -1175,7 +1260,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 170px;
   height: 92px;
   color: #afb1b8;
   border: 1px solid #afb1b8;
@@ -1203,17 +1287,75 @@ body {
   padding-bottom: 60px;
 }
 
-.footer__conteiner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (min-width: 1200px) {
+  .footer__conteiner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
-.footer-socials {
-  margin-left: 70px;
+@media screen and (min-width: 768px) {
+  .wrapper-address-socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .wrapper-address-socials {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .logo-address {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .logo-address {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .logo-address {
+    margin-left: 76px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-socials {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-socials {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-socials {
+    margin-left: 70px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-socials {
+    margin-left: 165px;
+  }
 }
 
 .footer-socials__title {
