--- a/scss/components/_subscribe-form.scss
+++ b/scss/components/_subscribe-form.scss
@@ -1,5 +1,11 @@
 .subscribe {
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }   
+  @media screen and (min-width: 1200px) {
     margin-left: 93px;
+  }   
+    
   }
   
   .subscribe__title {
@@ -12,25 +18,38 @@
   }
   
   .subscribe__form {
-    display: flex;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }    
+    
   }
   
   .subscribe__input {
-    width: 358px;
+    width: 94%;
+    margin-bottom: 20px;
     padding: 15px 16px;
-    margin-right: 12px;
-  
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    color: #ffffff;
-    background-color: transparent;
     cursor: pointer;
     outline: none;
+
+    color: #ffffff;
+    background-color: transparent;
+    
   
     transition-property: border-color;
     transition-duration: var(--time);
     transition-timing-function: var(--cubic);
+
+    @media screen and (min-width: 768px) {
+      width: 450px;
+    }    
+
+    @media screen and (min-width: 1200px) {
+      margin: 0 12px 0 0;
+      width: 358px;
+    }    
 
     &:focus,
     &:hover {
@@ -50,6 +69,12 @@
     align-items: center;
     justify-content: center;
     padding: 10px 28px;
+
+    @media screen and (max-width: 1199px) {
+      margin-left: auto;
+      margin-right: auto;
+    }   
+    
   }
   
   .subscribe__icon {
