--- a/scss/layout/_client.scss
+++ b/scss/layout/_client.scss
@@ -1,18 +1,39 @@
 .client {
     display: flex;
-    margin: 0;
+    flex-wrap: wrap;
+    margin: -15px;
     padding: 0;
+
+    @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
+      margin: 0;
+    }
   }
   
-  .client__item:not(:last-child) {
-    margin-right: 30px;
+  .client__item {
+
+    @media screen and (max-width: 767px) {
+      width: calc((100% - 60px)/2);
+      margin: 15px; 
+    }
+    
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 90px)/3);
+      margin: 15px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+    } 
   }
   
   .client__link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
     height: 92px;
     color: #afb1b8;
     border: 1px solid #afb1b8;
@@ -26,6 +47,14 @@
     &:focus {
     color: var(--accent-text-cl);
     border-color: var(--accent-text-cl);
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      // width: 226px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      // width: 170px;
+    }
   }
   }
   
