--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,15 +2,59 @@
     background-color: var(--dark-bg-cl);
     padding-top: 60px;
     padding-bottom: 60px;
+  
   }
   
   .footer__conteiner {
-    display: flex;
-    align-items: baseline;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      align-items: baseline;
+    }  
+  }
+
+  .wrapper-address-socials {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      align-items: baseline;
+      margin-bottom: 60px;
+    } 
+     
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }  
+  }
+
+  .logo-address{
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+    }    
+
+    @media screen and (max-width: 767px) {
+      margin-bottom: 60px;
+    } 
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+     margin-left: 76px;
+    }  
+
   }
   
   .footer-socials {
-    margin-left: 70px;
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+    }    
+
+    @media screen and (max-width: 767px) {
+      margin-bottom: 60px;
+    } 
+
+    @media screen and (min-width: 1200px) {
+      margin-left: 70px;
+    } 
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-left: 165px;
+     }  
   }
   
   .footer-socials__title {
