--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   -webkit-transition-property: opacity, visibility;
@@ -970,11 +971,18 @@ body {
   margin: 0;
   margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.5em;
+  font-size: 26px;
+  line-height: 1.61em;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.5em;
+  }
 }
 
 .advantages {
