--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -15,9 +15,16 @@
     margin: 0;
     margin-bottom: 30px;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.5em;
+    font-size: 26px;
+    line-height: 1.61em;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #ffffff;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: 1.5em;
+      }
+     
   }
+
