--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 93px 15px;
   overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
@@ -214,24 +215,24 @@ body {
   visibility: hidden;
 }
 
-.backdrop.is-hidden .modal-wrapper {
-  -webkit-transform: translate(-50%, -50%) scale(0.5);
-          transform: translate(-50%, -50%) scale(0.5);
+@media screen and (min-width: 768px) {
+  .backdrop.is-hidden .modal-wrapper {
+    -webkit-transform: translate(-50%, -50%) scale(0.5);
+            transform: translate(-50%, -50%) scale(0.5);
+  }
 }
 
 .modal-wrapper {
-  position: absolute;
-  left: 50%;
-  top: 50%;
   padding: 40px;
-  width: 528px;
-  height: 581px;
+  max-width: 450px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 4px;
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
+  -webkit-transform: scale(1);
+          transform: scale(1);
   -webkit-transition-property: -webkit-transform;
   transition-property: -webkit-transform;
   transition-property: transform;
@@ -240,6 +241,23 @@ body {
           transition-duration: 500ms;
   -webkit-transition-timing-function: var(--cubic);
           transition-timing-function: var(--cubic);
+}
+
+@media screen and (min-width: 768px) {
+  .modal-wrapper {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 450px;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-wrapper {
+    width: 528px;
+  }
 }
 
 .modal-wrapper__title {
@@ -462,10 +480,18 @@ body {
 }
 
 .form__text-policy {
-  margin-left: 7px;
+  margin-left: 5px;
   text-align: left;
-  font-size: 14px;
-  line-height: 1.71em;
+  font-size: 12px;
+  line-height: 1.17em;
+}
+
+@media screen and (min-width: 1200px) {
+  .form__text-policy {
+    font-size: 14px;
+    line-height: 1.71em;
+    margin-left: 7px;
+  }
 }
 
 .form__policy-link {
