--- a/scss/components/modal-form/_box-modal.scss
+++ b/scss/components/modal-form/_box-modal.scss
@@ -6,6 +6,7 @@
   
     width: 100%;
     height: 100%;
+    padding: 93px 15px;
     overflow-y: scroll;
   
     background-color: rgba(0, 0, 0, 0.2);
@@ -20,26 +21,39 @@
     pointer-events: none;
     visibility: hidden;
 
-    & .modal-wrapper {
+    @media screen and (min-width: 768px) {
+      & .modal-wrapper {
         transform: translate(-50%, -50%) scale(0.5);
       }
+    }
   }
   
   .modal-wrapper {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-  
     padding: 40px;
-    width: 528px;
-    height: 581px;
+    max-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 450px;
+      transform: translate(-50%, -50%);
+    }
+   
+    @media screen and (min-width: 1200px) {
+      width: 528px;
+    }
+    
+  
   
     border-radius: 4px;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
   
-    transform: translate(-50%, -50%) scale(1);
+    transform: scale(1);
     transition-property: transform;
     transition-duration: 500ms;
     transition-timing-function: var(--cubic);
