--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@
 @import './components/grid-card-portfolio';
 @import './components/address';
 @import './components/logo';
+@import './components/mobile-menu';
 
 // layout
 
