--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ body {
 
 .backdrop {
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
@@ -623,7 +623,7 @@ body {
 }
 
 .list-btn {
-  margin: 0 0 50px 0;
+  margin: 0 0 40px 0;
   padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -631,6 +631,31 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  .list-btn {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .list-btn__item:nth-child(1), .list-btn__item:nth-child(3) {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .list-btn {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list-btn {
+    margin-bottom: 50px;
+  }
 }
 
 .list-btn__item:not(:last-child) {
@@ -677,22 +702,50 @@ body {
 }
 
 .portfolio {
-  margin: -15px;
   padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
-.portfolio__item {
-  width: 370px;
-  margin: 15px;
+@media screen and (min-width: 768px) {
+  .portfolio {
+    margin: -15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    -ms-flex-preferred-size: calc((100% - 60px)/2);
+        flex-basis: calc((100% - 60px)/2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__item {
+    -ms-flex-preferred-size: calc((100% - 90px)/3);
+        flex-basis: calc((100% - 90px)/3);
+  }
 }
 
 .card {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
   transition-property: box-shadow;
@@ -729,6 +782,7 @@ body {
 
 .card__img {
   display: block;
+  width: 100%;
 }
 
 .card__text {
@@ -756,6 +810,9 @@ body {
 }
 
 .card__description {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -828,8 +885,8 @@ body {
 }
 
 .logo {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 24px;
@@ -841,17 +898,19 @@ body {
   color: var(--title-text-cl);
 }
 
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 88px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .logo {
     margin-right: 93px;
     font-size: 26px;
     line-height: 1.19em;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .logo {
-    margin-right: 88px;
   }
 }
 
@@ -882,7 +941,7 @@ body {
   left: auto;
   right: auto;
   padding: 48px 20px;
-  width: 100%;
+  width: 101%;
   min-height: 796px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -892,8 +951,8 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #fff;
-  -webkit-transform: translateX(-105%);
-          transform: translateX(-105%);
+  -webkit-transform: translateX(-135%);
+          transform: translateX(-135%);
   -webkit-transition-property: -webkit-transform;
   transition-property: -webkit-transform;
   transition-property: transform;
@@ -906,7 +965,7 @@ body {
 
 @media screen and (min-width: 480px) {
   .mobile-menu {
-    max-width: 480px;
+    max-width: 482px;
     padding: 48px 40px;
   }
 }
@@ -918,8 +977,8 @@ body {
 }
 
 .mobile-menu.is-open {
-  -webkit-transform: translateX(-4%);
-          transform: translateX(-4%);
+  -webkit-transform: translateX(-3.5%);
+          transform: translateX(-3.5%);
   z-index: 1;
 }
 
@@ -1161,6 +1220,9 @@ body {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+  .contacts__item:last-child {
+    margin-top: 10px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1213,8 +1275,6 @@ body {
   max-width: 1600px;
   height: 600px;
   background-color: var(--dark-bg-cl);
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/hero-background.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-background.jpg);
   text-align: center;
 }
 
