--- a/scss/components/_button-portfolio.scss
+++ b/scss/components/_button-portfolio.scss
@@ -1,17 +1,32 @@
 .list-btn {
-    margin: 0 0 50px 0;
+    margin: 0 0 40px 0;
     padding: 0;
     display: flex;
     justify-content: center;
 
+    @media screen and (max-width: 767px) {
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      &__item:nth-child(1), 
+      &__item:nth-child(3) {
+      margin-bottom: 15px;
+    }
+     }
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 30px;
+     }
+
+     @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+     }
+
     &__item:not(:last-child) {
       margin-right: 8px;
-    }
+    }   
   }
   
-  
-  
-  .portfolio-btn {
+.portfolio-btn {
     padding: 6px 22px;
     border: 0;
   
@@ -37,8 +52,6 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
   }
-  
-  
   
   .portfolio-btn--active {
     color: #ffffff;
