--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -127,6 +127,9 @@
      @media screen and (min-width: 768px) and (max-width: 1199px) {
       flex-direction: column;
       align-items: flex-start;
+      &__item:last-child {
+        margin-top: 10px;
+      }
      }
 
      @media screen and (min-width: 1200px)  {
