--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -6,8 +6,8 @@
     max-width: 1600px;
     height: 600px;
     background-color: var(--dark-bg-cl);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero/hero-background.jpg);
+    // background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    //   url(../images/hero/hero-background.jpg);
   
     text-align: center;
   }
