--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -5,7 +5,7 @@
     right:auto;
     padding: 48px 20px;
     width: 101%;
-    min-height: 796px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 
