--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -23,12 +23,12 @@
     }
     
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-      width: calc((100% - 60px)/2);
+      flex-basis: calc((100% - 60px)/2);
       margin: 15px;
     }
 
     @media screen and (min-width: 1200px) {
-      width: 270px;
+      flex-basis: 270px;
       &:not(:last-child) {
         margin-right: 30px;
       }
