--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -165,6 +165,22 @@
 }
   
   .contacts__icon {
-    margin-right: 10px;
+    margin-right: 8px;
     fill: currentColor;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px)  {
+      &--size-envelope {
+        width: 14px;
+        height: 10px;
+      }
+      &--size-smartphone {
+        width: 10px;
+        height: 14px;
+      }
+}
+
+    @media screen and (min-width: 1200px)  {
+      margin-right: 10px;
+}
+      
   }
