--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,15 +1,57 @@
+@mixin mq($type) {
+  @if $type == "retina" {
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      @content;
+    }
+  }
+}
+
+
 .hero {
     margin-left: auto;
     margin-right: auto;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    max-width: 1600px;
-    height: 600px;
-    background-color: var(--dark-bg-cl);
-    // background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    //   url(../images/hero/hero-background.jpg);
-  
+    padding-top: 118px;
+    padding-bottom: 118px;
+    max-width: 480px;
+    height: 100%;
     text-align: center;
+    background-repeat: no-repeat;
+    background-color: var(--dark-bg-cl);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/hero-background__sm.jpg);
+  
+    
+
+    @include mq(retina) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/hero-background__sm@2x.jpg);
+    }
+
+    @media screen and (min-width: 768px) {
+      max-width: 768px;
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/hero-background__md.jpg);
+
+      @include mq(retina) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/hero-background__md@2x.jpg);
+      }
+    }
+
+    @media screen and (min-width: 1200px) {
+      padding-top: 200px;
+      padding-bottom: 200px;
+      max-width: 1600px;
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/hero-background__lg.jpg);
+
+      @include mq(retina) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/hero-background__lg@2x.jpg);
+      }
+    }
+
+
   }
   .hero__title {
     margin: 0;
@@ -28,3 +70,4 @@
      
   }
 
+  
