--- a/scss/layout/_client.scss
+++ b/scss/layout/_client.scss
@@ -13,17 +13,17 @@
   .client__item {
 
     @media screen and (max-width: 767px) {
-      width: calc((100% - 60px)/2);
+      flex-basis: calc((100% - 60px)/2);
       margin: 15px; 
     }
     
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-      width: calc((100% - 90px)/3);
+      flex-basis: calc((100% - 90px)/3);
       margin: 15px;
     }
 
     @media screen and (min-width: 1200px) {
-      width: 170px;
+      flex-basis: 170px;
       &:not(:last-child) {
         margin-right: 30px;
       }
