--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -31,18 +31,16 @@
     }
     
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-      width: calc((100% - 60px)/2);
+      flex-basis: calc((100% - 60px)/2);
       margin: 15px;
     }
 
     @media screen and (min-width: 1200px) {
-      width: 270px;
+      flex-basis: 270px;
       &:not(:last-child) {
         margin-right: 30px;
       }
-    } 
-
-    
+    }  
   }
   
   .team__img {
@@ -68,8 +66,8 @@
     line-height: 1.19em;
     color: var(--title-text-cl);
   }
+  
   .team__profession {
     margin: 0 0 16px 0;
-  
-    line-height: 1.19em;
+   line-height: 1.19em;
   }
