--- a/css/main.css
+++ b/css/main.css
@@ -629,18 +629,15 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 @media screen and (max-width: 767px) {
   .list-btn {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
   }
   .list-btn__item:nth-child(1), .list-btn__item:nth-child(3) {
     margin-bottom: 15px;
@@ -650,6 +647,9 @@ body {
 @media screen and (min-width: 768px) {
   .list-btn {
     margin-bottom: 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -790,6 +790,15 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 63px 24px;
   width: 100%;
@@ -808,6 +817,18 @@ body {
           transition-duration: var(--time);
   -webkit-transition-timing-function: var(--cubic);
           transition-timing-function: var(--cubic);
+}
+
+@media screen and (max-width: 400px) {
+  .card__text {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .card__text {
+    font-size: 14px;
+  }
 }
 
 .card__description {
