--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -13,14 +13,21 @@
   }
 
   .wrapper-address-socials {
+
+    @media screen and (max-width: 767px) {
+      margin-bottom: 60px;
+    } 
+    
     @media screen and (min-width: 768px) {
       display: flex;
       align-items: baseline;
+      justify-content: space-around;
       margin-bottom: 60px;
     } 
      
     @media screen and (min-width: 1200px) {
       margin-bottom: 0;
+      justify-content: flex-start;
     }  
   }
 
@@ -34,7 +41,7 @@
     } 
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-     margin-left: 76px;
+    //  margin-left: 76px;
     }  
 
   }
@@ -44,16 +51,14 @@
       text-align: center;
     }    
 
-    @media screen and (max-width: 767px) {
-      margin-bottom: 60px;
-    } 
+    
 
     @media screen and (min-width: 1200px) {
       margin-left: 70px;
     } 
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-      margin-left: 165px;
+      // margin-left: 165px;
      }  
   }
   
